logs/bibolamazi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/arxiv2bib-1.0.8.egg-info'...
Listing './lib/python3.5/site-packages/bibolamazi'...
Listing './lib/python3.5/site-packages/bibolamazi/core'...
Listing './lib/python3.5/site-packages/bibolamazi/core/bibfilter'...
Compiling './lib/python3.5/site-packages/bibolamazi/core/bibfilter/factory.py'...
***   File "./lib/python3.5/site-packages/bibolamazi/core/bibfilter/factory.py", line 566
    except TypeError, ValueError:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bibolamazi/core/bibusercache'...
Compiling './lib/python3.5/site-packages/bibolamazi/core/main.py'...
***   File "./lib/python3.5/site-packages/bibolamazi/core/main.py", line 224
    print " -- EXCEPTION --"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bibolamazi/filters'...
Compiling './lib/python3.5/site-packages/bibolamazi/filters/duplicates.py'...
***   File "./lib/python3.5/site-packages/bibolamazi/filters/duplicates.py", line 70
    BIBALIAS_HEADER = ur"""
%
####BIBALIAS_WARNING_HEADER####
%
% File automatically generated by bibolamazi's `duplicates` filter.
%
% You should include this file in your main LaTeX file with the command
%
%   \input{####DUP_FILE_NAME####}
%
% in your document preamble.
%

""".replace('####BIBALIAS_WARNING_HEADER####\n', BIBALIAS_WARNING_HEADER)
                           
 
                               
 
                                                                   
 
                                                                       
 
                                 
 
                            
 

  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bibolamazi/filters/util'...
Listing './lib/python3.5/site-packages/bibolamazi-3.2.post1.egg-info'...
Listing './lib/python3.5/site-packages/custom_fixers'...
Listing './lib/python3.5/site-packages/latexcodec'...
Listing './lib/python3.5/site-packages/latexcodec-1.0.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybtex'...
Listing './lib/python3.5/site-packages/pybtex/backends'...
Listing './lib/python3.5/site-packages/pybtex/bibtex'...
Listing './lib/python3.5/site-packages/pybtex/charwidths'...
Listing './lib/python3.5/site-packages/pybtex/database'...
Listing './lib/python3.5/site-packages/pybtex/database/convert'...
Listing './lib/python3.5/site-packages/pybtex/database/format'...
Listing './lib/python3.5/site-packages/pybtex/database/input'...
Listing './lib/python3.5/site-packages/pybtex/database/output'...
Listing './lib/python3.5/site-packages/pybtex/markup'...
Listing './lib/python3.5/site-packages/pybtex/plugin'...
Listing './lib/python3.5/site-packages/pybtex/style'...
Listing './lib/python3.5/site-packages/pybtex/style/formatting'...
Listing './lib/python3.5/site-packages/pybtex/style/labels'...
Listing './lib/python3.5/site-packages/pybtex/style/names'...
Listing './lib/python3.5/site-packages/pybtex/style/sorting'...
Listing './lib/python3.5/site-packages/pybtex/tests'...
Listing './lib/python3.5/site-packages/pybtex/tests/bst_parser_test'...
Listing './lib/python3.5/site-packages/pybtex/tests/data'...
Listing './lib/python3.5/site-packages/pybtex/tests/database_test'...
Listing './lib/python3.5/site-packages/pybtex-0.21.egg-info'...
Listing './lib/python3.5/site-packages/pylatexenc'...
Listing './lib/python3.5/site-packages/pylatexenc-1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
